# room_Split_web_app

./: README.md
roomsplit/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml  start.sh  start_beat.sh  start_worker.sh
roomsplit/backend/alembic/: env.py
roomsplit/backend/alembic/versions/: 0001_initial.py
roomsplit/backend/app/: config.py  database.py  dependencies.py  main.py
roomsplit/backend/app/middleware/: rate_limiter.py
roomsplit/backend/app/models/: __init__.py  audit_log.py  base.py  expense.py  expense_split.py  group.py  membership.py  notification.py  otp_token.py  payment.py  rent_assignment.py  rent_cycle.py  role.py  session.py  user.py  wallet.py  wallet_transaction.py  withdrawal.py
roomsplit/backend/app/routers/: analytics.py  audit.py  auth.py  expenses.py  groups.py  memberships.py  notifications.py  payments.py  rent.py  wallet.py  withdrawals.py
roomsplit/backend/app/schemas/: audit.py  auth.py  common.py  expense.py  group.py  membership.py  notification.py  payment.py  rent.py  role.py  user.py  wallet.py  withdrawal.py
roomsplit/backend/app/services/: audit_service.py  auth_service.py  group_service.py  notification_service.py  otp_service.py  payment_service.py  rbac_service.py  rent_service.py  upi_service.py  wallet_service.py  whatsapp_service.py  withdrawal_service.py
roomsplit/backend/app/tasks/: celery_app.py  otp_tasks.py  reminder_tasks.py
roomsplit/backend/app/utils/: currency.py  exceptions.py  (+2 more)
roomsplit/backend/scripts/: seed_dev_data.py
roomsplit/backend/tests/: conftest.py
(+80 files in other folders)
